Tritao: create insert and cascasdeInsert method of query resource